0026855: Draw commands to debug Boolean Operations Algorithm

The commands to debug BOA.
These commands should serve only debug purposes and should not be used in tests.

Removing old implementation of the duplicated bopnews command.